fix plex deployment

--- a/clusters/main/clusterenv.yaml
+++ b/clusters/main/clusterenv.yaml
@@ -1,45 +1,45 @@
-#ENC[AES256_GCM,data:wsqFs30dT/rr0ONv3erFIDW3+qFXTNSi3LV4OgUsjblFq34TZHu8Xlfzk86Zp0Jn/51S00iE1/uErnb9N1cip2k=,iv:LdMAZAR+sqi9mP3Foh3qu68it1acvMMmXclFeWp79oo=,tag:G73oEFkT0gUeAXyKmF+kOA==,type:comment]
-#ENC[AES256_GCM,data:REylBHfB9LCUiDBZ2fbZqwclUgvzF3rmZ7GbbnRANwyoDYN/efQ6s5OFSrk=,iv:JrGwbSRgVXAPQBm4AofVqmPzCmrU2xa4/XWpQN7nASs=,tag:KzTtpxhsW2npXUQ0eOwM7A==,type:comment]
-VIP: ENC[AES256_GCM,data:LyevMxkd8WSQ20WHuw==,iv:kt4zPhw+I1LVr45/k+qhHZX6vazTs+OmkgzayodS+O0=,tag:H5rRoSY0SpFteRiPZAfltA==,type:str]
-#ENC[AES256_GCM,data:7GAN6iDtVx6CUb6QdTNWyDkPnDA/8GAeWma0,iv:ualG3ggFGRNofIXCsOVScZf6FslCxzwVQPEELSRjvcA=,tag:IfmYnO2uQxcvyamlazIt4g==,type:comment]
-#ENC[AES256_GCM,data:+0ZOGKfSWKLZ7LfmdEVvCfOcnc6SsdDZPMmoquYBx4KkBU0dhl/s8MNxwWb1DGtzDlDqyXi7sc6YOE7Gs6RnuFXD1YEEv2YBLyLg/KXrSsL0MrMoiS9L67k=,iv:M+f7yeF6WPneq0/5N3SUsJuTgsPP2dKGP6zIfKZDz3Q=,tag:A4WPgVvyqoTOdmogJfbzDQ==,type:comment]
-MASTER1IP: ENC[AES256_GCM,data:5Okpu5WnkAvdvZJiMZM=,iv:T+7X/BALLx+qd3nxtrg3HDZ2e7gx1HBYTGootp1kjXI=,tag:i+LRds323OEq1LvSg6dMcQ==,type:str]
-#ENC[AES256_GCM,data:Kqfz/858Po3O5qoqElwsOXax6FplPZDt6QHuyfOBietyfg==,iv:iF8cOtHxWOkW+nQjjKVOho3rXOP12InGO+kL9DYYEzU=,tag:GAP4n0AwllAZiQFvm7KKKw==,type:comment]
-GATEWAY: ENC[AES256_GCM,data:xHGTsCcr7ojgTg05hA==,iv:QaqDTqyqF+UNyw+lJAVu+QHE4wNSDgr72yGx4W3nJ48=,tag:2urCgTRk/BB7jd1kR79V7Q==,type:str]
-#ENC[AES256_GCM,data:wZ9GsHrbgVYeJebgdY28cS981w3cnpdNp2FESEuKbK/EIjEdcpS/KFRXEAHwYVo=,iv:ftgDlneumkDjjIgsrAFgy62EruxVbgd+SkFbVpA1FAo=,tag:zSJKSQVcjTQs0L1yrHjYWw==,type:comment]
-METALLB_RANGE: ENC[AES256_GCM,data:wl+8UGyXzSWpoZwqxhVGiSTIlvMAsrNKF/uc1cVHkg==,iv:QqBlKa/CiTrl0JZIm/5k/pm61q6mhQWP9ZKv24AMLkk=,tag:RcgVrNf3Uk3nBDO13yivWg==,type:str]
-#ENC[AES256_GCM,data:i7w3wv8Ny+tWeC014VZ0MCJmMa5NHTaOdG0n4+5iM67RcQErBFJBoo/mjVPNZquEC8vIuVmXQoM4gn3pmHWy+C+UilXo8TT18XhpDLJ99c1+Iw==,iv:foW31EESmca+Qi9il5KcXzJTtAQsAtGPEorPXsmvAXY=,tag:KW5tedq7BhY0CLSFBdxpfQ==,type:comment]
-TRAEFIK_IP: ENC[AES256_GCM,data:LJ90tvqojAPjTtxrX+pR,iv:Gp2efZ587mLpIF0duQlz2ZFx5Ec6ytkq4NxdVyAn6RQ=,tag:Jap23QANdhNz8o2mcar/SA==,type:str]
-#ENC[AES256_GCM,data:ZjcVIY9fgEiNvJ0/MoVvju0cP4U8t4Q0WA6NblgJ6sYN,iv:E6Iisuk+ggcVrXw2ko3NOrMfIZwwjfvVrVW3c0LYMLk=,tag:oybUWTMTmmo/1bUyKRmMAQ==,type:comment]
-BLOCKY_IP: ENC[AES256_GCM,data:OC0wLJUc7Y1phA3PIgdA,iv:tbz0RsJ9n7HVMJNtKRtLXhId06G+VIyrPIQRTRZLIRg=,tag:zKODDQjGemn7FY0zveXFxw==,type:str]
-#ENC[AES256_GCM,data:6fe3oPRQKfbF/198QLHkjOBg7050ntIuWnETikMAc6pU/ufryrzo9khyU7tZHeoetfkbPApW6G7M+Zduys/HG5km9daOPtm0mAMZ8EdXNG8=,iv:mpIyQ0CI1FIe3fEJYIIFC4l5jLlULGxpWQMMr1BcAlI=,tag:MUXqz7Xfc/0R0LNNjVwKPg==,type:comment]
-DASHBOARD_IP: ENC[AES256_GCM,data:R5CQoTM8NfjNI0LcZlnr,iv:oaKUC1o7AyWs8sYOMbS42yklmXMmB3Nc/uOcQRylt54=,tag:I27D17HONzLcJ0WgH1UfhA==,type:str]
-#ENC[AES256_GCM,data:SEoqqa/EL6lGMfKRIiExp1dWSrM1MqWC3qGAZYjYvDkHhuc299t0pX00FiSv9eFipl1Imud5xMcvd9XAKUH5q9E+zfkLVmyjYXCMJG8etQIvvJwqCYFg,iv:j+0OYNFj33magiY9kbtYl69B5BYDLZY9AvH4s63M7sg=,tag:HqC5JzOb9DXwHUTFVUkq5g==,type:comment]
-#ENC[AES256_GCM,data:dTjex2c5s0sRmth4irlfvY9mi5orVFWuAwST9dIncOE6SgP7aveWD/vPmhkZUhZJfmIrZ6Ai9x8Sg3Ag4sizr5Gb6bHyDbvBZzeIDkq27eDULGqt4307EgjIMvL/n0T+Wt5FDNH1hDT9OeS0Or6jVDPFnlofWTQZdVFHLQ==,iv:N8jPhABP/DJm6R4gDbRlwItwNSJjr4gLtSECxjrITwM=,tag:7AN/5FG243ae7RGtB7/NGQ==,type:comment]
-#ENC[AES256_GCM,data:ZCDipbOBqutyTU079Gb/3DTfbj1OtI9uh2CNaxUREfo4Gi0Ov/ic20/UH+V0vu6J/5ejdQFOEplJXznuNOi5gUfG4eFaQM08nDldLcm6rgs=,iv:U5RN63mFv23+CToOY+kpCmsK/xcn7XM33v8a/+9OCow=,tag:IgShCuX307E5F30pgnxypA==,type:comment]
-#ENC[AES256_GCM,data:q2v3+Zm2TdoiHl+kpujmGtbUo0UGWiQ258gvMBbWttej6zwv9FnXEAiVI6w5TPIpTj/B+BEm,iv:HMx61+RiwaSKIDYRID+Gq1l7gG2KHHyQFjSlFkfb68Y=,tag:DMA2zVSVfJe6BywnJ/sa9w==,type:comment]
-DOMAIN_0: ENC[AES256_GCM,data:C0w81TqGK0gpyOvN,iv:DKV96le97iS3mqAHa0VW/Z2eWS38fB71nviR1EGvWiM=,tag:bYlqBSOxpZVqEfri3FVNNA==,type:str]
-DOMAIN_0_EMAIL: ENC[AES256_GCM,data:SsKaqQf+WdKp2RC0BX+ZZT4=,iv:VxxLhyLKtVMs7NSGUr4+l5QcyFDsD8zBJMZbWt0eta4=,tag:9KoVezODOrTjc9rl+zcTxw==,type:str]
-DOMAIN_0_ZONE: ENC[AES256_GCM,data:ec2D6cqQQ1KiCFEviynTPx7pG9iwV3tMOius9i9qF6w=,iv:pptxc+LqJh5eVvxriuwrA4jKoIc+xzUVdi9w20niEj4=,tag:18L2S6JpnL/5aCxJtPVEkw==,type:str]
-DOMAIN_0_CLOUDFLARE_TOKEN: ENC[AES256_GCM,data:6sEgFTMAOJEstNJkeQGpFSJk4vKayb0hW/tBYdgSZ0Ot39RLfHYULQ==,iv:4jcNHCGSWJaf/nF9+aDngojGLNPf/wxteqa3lMRlvuA=,tag:XJccCGqBSZsVWAinSg0DVA==,type:str]
-#ENC[AES256_GCM,data:K6s2fzl/H7D8jWnGT1IaD6L3MEf59ESpV0eOSVP9wx+efWad2JdKVZu6K83VmjMdf5U2qXMr4JAZ3A8X4AR4sw==,iv:BJfZOTEo7PoQlqzI1Ceqs3hhMQk9a2eXSGESLY979Ig=,tag:8sYPk9m5PAH5wzx15mnaeg==,type:comment]
-#ENC[AES256_GCM,data:QMlF+mde0TMb427KhWbNGR7DfsXj1f1e4NYu2JEb6Bfn8iGANxWR5aAaEPlQOj45/abExEy9+Jg=,iv:djb7jc51QEqUHAx7dXIZiFkq2C16T2KeM6HkbxphMwo=,tag:VwxW7n93gVsLYSUvq1ec/Q==,type:comment]
-#ENC[AES256_GCM,data:xZa0pqYS16kEdap1C1JUTPnUaRB2yoefrw==,iv:rcTb1NaDkuZPGHDZqQFCV8ICnOc8Gc6X2DLx57Joo5o=,tag:2Nu461Yfc1TJH0M5YPshIg==,type:comment]
-#ENC[AES256_GCM,data:Cs2Y3fz8gCDX/gBblgDnv1RQH5bgGZA33JwQW+rh74xqybP/f+nvcLGc5RZit3rxIXIlByNbIgwQJMt12/BnPPvV2k68AAiCBODJdyM=,iv:+W5VEwPq0f93FB4Dm34qUqv1OHEB8jDtZRONZr3iiSw=,tag:LzMdEJyY8QwHIom6yQES2g==,type:comment]
-GITHUB_REPOSITORY: ENC[AES256_GCM,data:jATVf8nTM0Wj8TUc+XM+NMl5a9LuC/TcZMdJXNg6SG0j9eb9yOrXaOqf2R+KPZ/n,iv:pY2CGQEROQGxUqDI8UJTcwa+n41XYWwebKLzCGPqxiU=,tag:8FM462Ji640R5VPGdd3HGA==,type:str]
-#ENC[AES256_GCM,data:HQGUbd1K8vbIWOWQX2oLMhtajTbZr+WeO8ItVrh2B2lJPOWta3U7ahhWMF9Pb9uPXWJBg1ttAf4TqmD8dy0BvmQYOGOqKKM=,iv:28hwMsWFBeLA1jfCLN7XePiqvd68R1yNs+ue3yu+RJM=,tag:i8eqY97mJyG31EFoj04GQw==,type:comment]
-#ENC[AES256_GCM,data:rMCUeI836ZOOYvrVg+pbwZ12uu0vV5zNFkpzy/Lr/40IoQok8iF2J1c9thsnBOdfKOZKJkfR,iv:puUCPN/XrgLQ5Lh2oKE85qvmhBCzTJ793+dBKZtczSg=,tag:plyJYpaHN2mGxpwl13DvXA==,type:comment]
-DOCKERHUB_USER: ENC[AES256_GCM,data:n4Jy7Nu+UQ==,iv:hnjHtjw3ske0pgvl0RXDORMDe9kGsJZglx2B/T2G14A=,tag:U1Yj9IttPX0FBOUl83BpLQ==,type:str]
-DOCKERHUB_PASSWORD: ENC[AES256_GCM,data:8fzTpvmM2kY/s/MrvpiEjxTZUXI=,iv:3y5qUNHbcz1FlDKsUw5zS89NrTHbue6X9j5ZbfBQH8s=,tag:Dpc0RbwYL57BIX1JR0kvQQ==,type:str]
-NFS_SERVER: ENC[AES256_GCM,data:gF/Hx71znDV1XI8=,iv:oI5zCkmsRZsR9hxC4oji9vG+GfIEE7kgxawjCvKBwEM=,tag:iwT9VeccNWBflAQv6Ady8g==,type:str]
-PLEX_IP: ENC[AES256_GCM,data:W5uJtWNOeoXowCpuQsSU,iv:NCTom2Uj6SxRK6cBmP66857yZ3X272/vggyeUUEQ+B0=,tag:vRGJCxMyeMzTFGmtcTnkxg==,type:str]
-BACKBLAZE_ACCESS_KEY: ENC[AES256_GCM,data:1ioZ8nbrwN2jPPeBxUccFZfjlXQBwjLb+A==,iv:O1/5jM0fsFtRbVViy9LFqyV6PXPKgnlOsDWyFMG3WHM=,tag:ZSMnJvzID6E/GdrKRithRQ==,type:str]
-BACKBLAZE_SECRET_KEY: ENC[AES256_GCM,data:o6D3wZ2ZWzHbsqur0DmN8ljJ2ZOn0XkH,iv:CoLE+g3ignNYVo3EmDWlWVIztLyrZie7WhT3V7VA8rY=,tag:x8sco/wJUM0ALvbduKxHyQ==,type:str]
-#ENC[AES256_GCM,data:o6GXC1OfZhL6S3U5o1HfV5YfYDLBYz4sZcrdr/B3VhMmmDL8RM8=,iv:DZE5vWeWChxKJiVMXvz08TuYdXCitjD0s+oEUysa5w8=,tag:+ndI6QUIr1CBz00wLuAldQ==,type:comment]
-BACKBLAZE_ENCR_KEY: ENC[AES256_GCM,data:0ewNcvB+j1sSODY/kjBZ3vFgROc=,iv:n1nj650oS8gc+0vFrqOATQI86B3qNCm1+Bn3O41wW+o=,tag:sgbp8dknZTDfJ1o8h4HhOA==,type:str]
-#ENC[AES256_GCM,data:O4MyZAH0GyYMrwM3v6E=,iv:tgRcDrUwOt5SRh9YXZgeOQc7b9ZOjhKe0+CMzvldTdc=,tag:TkGY8gVzfn7SltEMB9GUuw==,type:comment]
-PODNET: ENC[AES256_GCM,data:IvNi0gVxQn29NwJ8Ug==,iv:0kZ//BJJLNkbqcZ8zFP07AM1ymR5WPiqiUsMT288pA8=,tag:l3duo7DO2ESaiNCsQ2IlNA==,type:str]
-SVCNET: ENC[AES256_GCM,data:R5zKzLtsw/HMJ4FeDA==,iv:3KaHydGet82OAcZqL3pBFLXdGfuMKVpwAk+CN2ifHMM=,tag:uXqGs8HEjYwkol6IDxkwaw==,type:str]
+#ENC[AES256_GCM,data:5WkV3lHto8FWnPMm1VkZL2Y2XxiscdZi2dDHh2aCpDRRnk53qZc3yOst1PWKORh+wt3teIOwY3axAkIR/Mytr3k=,iv:MM3igFVsDgpxtkEmR5WgAp1+Dd6W6BsLTDHNyuFxqCs=,tag:7CtGPbv12ug0StleIamuuw==,type:comment]
+#ENC[AES256_GCM,data:YLVDHJW/W1mr/yPDb8BFFh2vQp8Y7Afj9EALdl9co58Ne4Ki4EXaDikSYmQ=,iv:FgHkZLyuOT/66NF3toP0YZUG8tpOzc3XEDVs4smLkRQ=,tag:kDcvKS0nurpLpUaNGirY1Q==,type:comment]
+VIP: ENC[AES256_GCM,data:opSk6z25J7VfY9ZF4g==,iv:ZvDKYA4/SDOk9NoMS+WyaMrxAAbsZRgSCQCDKpv3flg=,tag:pAf6D50raU6cju1CrFy3rg==,type:str]
+#ENC[AES256_GCM,data:6vNWCGth92B1jdU+9iH3NNDSD7xRAjmjXLpO,iv:dVUV6oLo+W/PWejdH25eJWmT3v4vbCbN0QhduTQU6h8=,tag:sbJywMMKCaZEDNTQPmC1WQ==,type:comment]
+#ENC[AES256_GCM,data:1HCWmy84hUa78X+/rDuOGAPk+rCT37YYGFXZ7eFdbBatXYxULunbCi9zR2bEoEYpjRm+eBv0fzJ+9oql2fVP5VXHMRcrAwl3soaPbsG7iDuFqEKgJ6GQTMo=,iv:5bzlXnh76vDSrl+Hb2GyCVaNeEEidc7c7agYrnGa8bY=,tag:foAb/XZFIanFQLRnawisyQ==,type:comment]
+MASTER1IP: ENC[AES256_GCM,data:Nl3HXXJVDf/wzGDnOEA=,iv:/bB4swC6PJhAXZ7fEXtJiqFkMLl+EQkHbggszAwdADA=,tag:wmD+Pe3mUXUmJ+FCt/xJQw==,type:str]
+#ENC[AES256_GCM,data:K7QdJkwqtGbsE6c8zz0X77x0rBBKRmXTZmKGBH05IAiAoQ==,iv:j4q39aOl+i21bOT5AD9WsDptVA0baNr9oECV9efCKEo=,tag:NdbYNinyM989YOIf2S+y3Q==,type:comment]
+GATEWAY: ENC[AES256_GCM,data:+Z+la68FUKSA8w18ig==,iv:sI+4MH0vt7et32YTtycfaKQmAs/3M+2Dq6+DGtNiieU=,tag:ZYXWCM/bfyF6FjOgEa3RJQ==,type:str]
+#ENC[AES256_GCM,data:HZmYdt05lUuJ6Wf53rE36noJn+f6bsxOSVWSLEBk4xZdRk93OHCN9mxhcxpd8w4=,iv:Vz0FRsO0b5TNehvRojZLfs6MPl+7k2pNaVlMX77M2Qk=,tag:HOv08X7VjT8atye0nd0Ytw==,type:comment]
+METALLB_RANGE: ENC[AES256_GCM,data:h4DVVNj6a1hoCZ5r2uXXyV7krqDPoGWz9So4aB535A==,iv:4SJlBsWo7Gh8x460ZrofmBgQ/tpMCta0MffHDvHSw/Q=,tag:R36IRIvxOwKcrm2Zc1FeDg==,type:str]
+#ENC[AES256_GCM,data:3YlIEQVgb3wbGWlfFnntAxUe92UN19XlHeTV7pZ+8VLn05rh/9FtLK0SLfLEmJa71druMYEOacNrCHW0mjOhoauBUZnZ5fn1UlzDvRI8ViaaxA==,iv:lLZ0sp4qjY4iYlR29ibRisSTkhntHKS0BhIjlOnyjIk=,tag:AAwLrgJge7XjqOwMplmf3A==,type:comment]
+TRAEFIK_IP: ENC[AES256_GCM,data:WqqRvbQ+7kJ22ozCB8Sj,iv:4JHVdUCeRjqgkzt/DdqNGSbGmG/jBUrYr/eE7ggBLyk=,tag:yBCtNGxQUbdP+9LxwWnEIg==,type:str]
+#ENC[AES256_GCM,data:ivby1KW0MxSDCLDI/YCPc15yurjppyYx/UXmoJhHjR+L,iv:kj6VSAobl7mDksNgRgErAEfQy8VaF+yO1UCK9QP15DE=,tag:VaWuoX0YN47qtgehX/tInQ==,type:comment]
+BLOCKY_IP: ENC[AES256_GCM,data:kv1iDMdWQcHvq8OtrrAZ,iv:B60FCZmyEnLdvEjQbP5yY5kF/7yq1A1hizwzK1kqSWU=,tag:jnRR0p7Awj6iK4du6AEfAQ==,type:str]
+#ENC[AES256_GCM,data:bXtAbnBTYew1PF/y1TsP2NMSJJBeybck6jryzZfth8/uxVLxOGRBzE6JPmfF3MrbRVm2kHkrnw5DQyRS7a05yON9FxKAPJP/M003GYK4gvM=,iv:yw5KJfGyvRdHxsSNUFjqtOzau0Tm3anD312D7+KMEXA=,tag:5sh0M9758WY6dgzAkU/YRw==,type:comment]
+DASHBOARD_IP: ENC[AES256_GCM,data:e9TdWkc3RyF27gyXRT2G,iv:zAPQ6kX0OZXPbgrkq/lnv61KMniWFFz0WvLNbwdyQ2Y=,tag:cNUA4mci1wXVT2ge836ZLA==,type:str]
+#ENC[AES256_GCM,data:0ayyoICnf8X3W5wnLY1bO0Ei73Pe3WUqt60wgwAJb6JpnR0sests76rRUwdTZtQoi64fDIP+5uh4/raUv2UqvdyaSTJm6dZ9N0KTtsyN0zGcqMv2uEo0,iv:OzL1v8IKx86DCswv7OBRBIYV5AyhIo1YmwDJFQGSJXs=,tag:YW1JkHSC4TrlcW+ecdwMbw==,type:comment]
+#ENC[AES256_GCM,data:CT9hSxNCq13Ndrh2n1aR8oqxdvGjwL6HQ8gkV9hJ5RQ9l1vbFpwZ7fCegIP8O2n+JfZKw9tikSbq0hd8X3ctU34JM1pkVEVwWjyGl/866PPq+Q45uzOQWCL9i3oL0S55hRu/t/ssIQx8ScfbPsPRYBNsGBTGyeNwjt9Dxg==,iv:R2ozEJndEJrl85O1jeXHUQhQZi/1kQbBkYAbsxyctj8=,tag:Yc5WouzY/9vkoKKVekbS+Q==,type:comment]
+#ENC[AES256_GCM,data:xFZPuZQgrTvbgCV+6KA1sm7b4eGIH+5R8jidtOI42vGxw35CMx9VQEyqbvVvZTQTwPXGPz9kGK+0UgebbW3j2ngbsjbBjfqeSNWun02ffjs=,iv:qXOPUjiAn2zqVCBZDEJSn3+EmK/CXE9dl1LPZxWmKks=,tag:v4HGex+djBpQbLZg0sMJpw==,type:comment]
+#ENC[AES256_GCM,data:FsEZZD41WxzCKO7eB8K3uACqOL+JMKsaOEgpSxaxB5y1nRxhyP1shcxtzJjGvsGBjLyv04YH,iv:yKnCiJCxYChEUx8qLz1/8zWGPaFhk4VhcokmQ4T4xsM=,tag:EfBRX6zsArau/VAy4YHnRw==,type:comment]
+DOMAIN_0: ENC[AES256_GCM,data:A+JpCrrkQB/Xkey+,iv:JizC3GxuZzMzC/l+rYETZO7PktGUIGuXK0gIP7Z0N8A=,tag:YA0WlRNSIte1rLVXsRZ1Ig==,type:str]
+DOMAIN_0_EMAIL: ENC[AES256_GCM,data:uiR+tEesa7IUAXdRM3zyOGg=,iv:Pj8sQr+884G1aZm4rbn2YTFtCjELXNUb2afiHtsPcyw=,tag:R+I3aqzVGKOa22kJJ6sdAg==,type:str]
+DOMAIN_0_ZONE: ENC[AES256_GCM,data:36YXWPlGMqJLP9fjnfp4Hi8FR1zIu6VzyEvwxqspw7Q=,iv:/fIHDxR847zBsUEC6QCVBfxsFc29bJyv3tm+/cpUx0w=,tag:mqJiirj8iKEhIMjn/h9Ltw==,type:str]
+DOMAIN_0_CLOUDFLARE_TOKEN: ENC[AES256_GCM,data:AJqG6Ho/skr07PCqNiEAv65ELwKcnftZLw28fHzVhJzItbD0MnbhRQ==,iv:CLNTOkUVP3/OhpQqOOD09hnplVJTW1R+cvyAVkEEBz8=,tag:5itlvZz9XQf3G0/I4NMeJQ==,type:str]
+#ENC[AES256_GCM,data:LwrjYCRh2yACebgY6y4pFja+9kignr+21kM3B+zwe51L7P585hJohEskd9BlOSsiwXYtsMHt+q5baJ1yjKR5pQ==,iv:B89twCGFWMXfF3oemQDhlxZZGRuRQRjYzdtOQH9gABg=,tag:ioQvCGkmg+0xwC4kZ7DRMg==,type:comment]
+#ENC[AES256_GCM,data:ieq2GhEw0uXuAqcUXpBQwgtRo1e1GBFdse3qpWcl3AbjNtuhh9sO9djDyWyACCn2T/qg+JnXVlw=,iv:FdXg0fB7d1dVIed8BYSqUdGMT1zIW+oCbFUnirs7Iw4=,tag:pcgAaw8ccc+mEDKrrAPrmg==,type:comment]
+#ENC[AES256_GCM,data:isaxAO/CSSUA2kfWL+AbTqRy4q/E/qscHA==,iv:+BLjXloTWOuOcfjPGH63KaaRVh+cfOuvOAG30rGhhag=,tag:/jrvEHMPrEUDl32Kc2hYoA==,type:comment]
+#ENC[AES256_GCM,data:hOyi10RO51vSksRjRTOTG6Oef/EJyB5eHxRnkhJ3R+5tX3mR9RJlWGmEb8+GRTCQ5MtD47r/RLxyFpXNfAeCORZvJfLK/ZKCJpZFfBE=,iv:qOd48nSfD80cmpYHuDMTWVZz5eRbKTmaBBey/iJ879k=,tag:yqCkAHTYxyH/XWXrTdmDDw==,type:comment]
+GITHUB_REPOSITORY: ENC[AES256_GCM,data:1LzMhpph0Ue/xRLz298Qk4qHAo5+cOBdvYMxsIKUoUJsRtUNM6oegmt9EBWy1UNm,iv:V6dGsICTkL2xxLbWyhN6O1kl352/h3yPdIMdnOhDOYM=,tag:uudlCK4XGfnEAnbZXk5G1g==,type:str]
+#ENC[AES256_GCM,data:JF38d0pjNEd5HEW8FC2qwCvk3gaWBZfqTsakEqOI9NGzLgRS3y0aCnXW0oVxPjg3OuA8uYH6yRSkxypHJBbBgb9UxhkR3DM=,iv:QRg0yX0n+c4mp6T1RjXkDzE1WKsJm5AdPI/7rAMFvxQ=,tag:IOAswRA2nz+WB4erLZ3wEQ==,type:comment]
+#ENC[AES256_GCM,data:IdKaO0RKJ+gtoTTDOGOAU2IoOQ2Ljd9ql0TOl+kXTrREqwjTITdSYixHc6y+/5AU45uJaO23,iv:GPg1vMApioWwh/GGSNsum+Qi5HYdHeCzWPMo9y5P9l8=,tag:21kBs2/1vUzCI6IemDYCsA==,type:comment]
+DOCKERHUB_USER: ENC[AES256_GCM,data:yWhi+M9vMQ==,iv:NLiWbyGn2vETpQFTlZTb518fSmj1Z5XsvZ1VTcbL794=,tag:FKVA5j7MsvDJ9cFAMrqQSQ==,type:str]
+DOCKERHUB_PASSWORD: ENC[AES256_GCM,data:Ymt86E26FiWEwt2dpcAEnq+JWmQ=,iv:PkMwWBrR0tTMWCZl5kuRHA0GNRJeQw5v0QDBtQfds7E=,tag:vTNUilXXpO1PovMLR7SvOg==,type:str]
+NFS_SERVER: ENC[AES256_GCM,data:2YB5wkmnGpAlVdo=,iv:xr9cDahoJRuncypHNGzbRUPhEkcYb99MYozAZIDYFho=,tag:c470czX8ngM2Mbc7q/dugw==,type:str]
+PLEX_IP: ENC[AES256_GCM,data:XHZOy/T5p1eRWFgloPyi,iv:KWPIIKkacFwPXGahgnK2GkRf/xgsVGwGmS7gXv/2YSs=,tag:ZJNHc/rJhf1PAAYi1E/bFQ==,type:str]
+BACKBLAZE_ACCESS_KEY: ENC[AES256_GCM,data:PkCj77G57sX6JODSUdeRzHQ3qgED/iZq8g==,iv:Y8LUX03A/4yIYoDnOhENf5dTC2fn4VvF1wNULtMKZGk=,tag:fLrb1IYyKReeD/74seOzKA==,type:str]
+BACKBLAZE_SECRET_KEY: ENC[AES256_GCM,data:XBumGCklH9/lKVC/tFTziDoMWbr6oAjs,iv:6yBV7/CYxrrOjYsh/Zq33N8r4H1XWPYeIPcsfQPKcMk=,tag:cvWORGhG4hfbyKvxFMFyFA==,type:str]
+#ENC[AES256_GCM,data:w6bhubrL0Eyi/4MKAXdyiEDFqLEDh4KzM71P50R5+bDOtxYo6gY=,iv:WkBNTc0c7sH5XRgQuI9XZYdraV0Mp0+8mAz1zYPGXLc=,tag:H3LPZcTqddzgDzKobnCt6A==,type:comment]
+BACKBLAZE_ENCR_KEY: ENC[AES256_GCM,data:vuwWCi7dG9zgJXV7qJEfDQvdBI8=,iv:f47TGifPsnByCW11w8yVsTH54hEUSC2jAOk3wdbrhXQ=,tag:0IAQBBrzkIxZUpBk+GgPaA==,type:str]
+#ENC[AES256_GCM,data:sz8iMqqjtwThS7QauFA=,iv:yGHWnc9yjBGNMp/GRRJIYgTtB/iXKk7q6VsBcTVXra8=,tag:Qn3A1c4ns5q5j/3ZWqUU7w==,type:comment]
+PODNET: ENC[AES256_GCM,data:NgJyyIjvmt2V1PqPiw==,iv:fX0o+SXec5wj0xd9ZUxZOmubFfxTq4LxgIBIySSusbY=,tag:0mYkLd3p+rrA7q+gBhKqIA==,type:str]
+SVCNET: ENC[AES256_GCM,data:9YWHySvOTb6WS3adjw==,iv:h+Frfp1DM88QAysu1sVvWAa8DwdjUH+wC0b/qmvMRkQ=,tag:0nogcdCLufB0a2sZHWzhxQ==,type:str]
 sops:
     shamir_threshold: 3
     kms: []
@@ -50,13 +50,13 @@ sops:
         - recipient: age1xerwm86t75dl2v0sqq5xvzag5q6deawx5en7rqy92886049htaxqagw7yt
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBQU2x2RDRvUFRNSWJXMTFI
-            cGJXTkJZeDBURTU0MThhd1lSREdkSTBBeFFjCmhHU01aWk0zOEJRV0ZNS210SGJS
-            ODBKVzliNEFyaUVsTVhnNDdVWnpWOW8KLS0tIERKT3M1R0xoaFJ6Zld2THR5R2ZC
-            M2l6eFRFMzcvcWxzanBvV29YWTl4UUUKW8EzmnBPP611pNv7cX5ldd0mQlnyoQ5A
-            ifObzgB3L9iRxa3JtX5N5p3rZH+mw0f5KMc2zLXq2G2ZngR/uFxrgA==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBRK05lRHRoSVlUYmZ2YzNs
+            Z2trcXBwQjIxTjQ3alMzV1p4dFYvYVpRNUFvCnorUjZlclNEVWlnMFI1Unp1enBI
+            bTdOdGR1dTVabmxSQ3A4cS95a1ZvT2MKLS0tIGpIalRyc3djZ1VOb044Uno5ZUNQ
+            U1hpckJDRXJIRVAyT29mNFc2SEtBdXMKweOyB1Ml5O1qoPgUYbx2/Qz5Nwr0SOdq
+            xYvvkmNzFBSq0Kx22jqhAbOqXbsR2aK4H1HCBkZTnTha5uSLCcY/FA==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2025-01-11T19:46:07Z"
-    mac: ENC[AES256_GCM,data:MZ/lE2NwJY/V3E/MOedTfHs6VPQaa2xHYlT5L20DYG8JiR5lxexctniQ1nuvkpXO3kedWgxqQabZZujoA8ic/hSttaQ/WfeL8jWNXNl2sEfDPPW8lZn1Wtr01qM8+/sCCg18Ox2sicaR2rPQU8yBkkcJsa1sfKyZ3Y0nCqxrrM0=,iv:pNG2YnB/57HAzlmIgGYKkEOWbHCty14N4N4UwHnhnis=,tag:Pcrw3T4aGVGH1/l594a8vw==,type:str]
+    lastmodified: "2025-01-11T20:05:15Z"
+    mac: ENC[AES256_GCM,data:xhU5aZPf3tt1RQnLFIshpB8i7NYNCqDOvAmJL4xBP0RItv6rLvvQe4nl/THaDhXgTEpu4QdNqG/Uh+N0ynUrukhvpq/tmQXyohEyzcHPrOPytWOGHWylTq3dLD1RMOZMCVzTtNHIGDNW8L/DlceBny3yRErzTg411RbtNyG3szc=,iv:jRveiTCYXA438h0cgPS++Myzn9O8S4xwZt58HpGf3ww=,tag:cjT2BMbmq1s4ft+TKENpjQ==,type:str]
     pgp: []
     version: 3.9.1
