--- a/clusters/main/kubernetes/flux-system/flux/clustersettings.secret.yaml
+++ b/clusters/main/kubernetes/flux-system/flux/clustersettings.secret.yaml
@@ -4,49 +4,49 @@ metadata:
     name: cluster-config
     namespace: flux-system
 data:
-    #ENC[AES256_GCM,data:lv4AT/BCtxxDkF/oGk78ATh+JQCqvjIOQGxSOr3IH4HKB2ZMMYGJyFBfLjcJIoCMse6bE/3Bosy7NXdSHyiPz6c=,iv:nZx/JJEATfjmRPXL9lKaoxLdYP5FF3IEhbPryhXqWlQ=,tag:zYKOlUXUmmUhoyzBMSlj4Q==,type:comment]
-    #ENC[AES256_GCM,data:XPj/mV8ZyOEFwAxDhP+JfCv5IBwNgl7YbNhqIqfApkUo19bYUyyF5jDljWM=,iv:qTIHj3XzdvTGgzm6ndkOuDKCUY2FA6io9Go+xNzOtRc=,tag:CE+vTURxWU4wpZvjO8R9fA==,type:comment]
-    VIP: ENC[AES256_GCM,data:aBgOhFp+hXaPbvPlAQ==,iv:+3zbNS9kwI1fMR0dak3qK8uBhzNva9GjllKXisCoxps=,tag:CXgjXTTEuMpKT9+sZDDpiw==,type:str]
-    #ENC[AES256_GCM,data:igeARPF7gYoV8dibtQbKJz4OdazoNzDuqCun,iv:T3UoibUBlFCotjWubAojlPZr1FvQXMb7LgYSysdPNlw=,tag:COv5tGF6SxonxSUlY5UJcg==,type:comment]
-    #ENC[AES256_GCM,data:j9Rb6eu35Sqngw0e+rruLVbPQqR9fRIKjudcRhTlM2qR9/1IKThnj8BCNmv4wuqDFq4TIlzzmbEcsdz7Qd0VwB2s93ngZT2TjEjonRoW9vbPWajQAbUiSOw=,iv:G8JVtAMT+9ynlKcKXXtcuE/QlB30jIK4rsI2R0AXlkg=,tag:v76v4a9C+Mf/vorqEpYd+g==,type:comment]
-    MASTER1IP: ENC[AES256_GCM,data:bOqkuWft49ho9eIFkN4=,iv:eWI/WAuGBj3u1H8YHlbadAylh5qWYt8z6k3KbuMvcus=,tag:xdt2BeHmqkVzgj0XnJ0Z3Q==,type:str]
-    #ENC[AES256_GCM,data:evlDWETFRYdloOAHDbodUxbYVUX7kpE0WXr5BDkTtmgRlw==,iv:DHgihbxqzfdjVJOB7qBXHY94JjPgFw2zI0lsbIHh0mo=,tag:ih/Bi339l4+zn7hFJUYy2A==,type:comment]
-    GATEWAY: ENC[AES256_GCM,data:NQ1Qi/S31U3viCZYxg==,iv:fDQ5FPSpzspkuEC9Cm1bYwfbUGA90T8xLT+tUsLnhVI=,tag:QqV3rpKH24MYEB2Gi/XkVQ==,type:str]
-    #ENC[AES256_GCM,data:/OIEXn3zYpKtFVmV92mEXUi7EEPWI0XQV1nQ4924R/zP/bSim4jjfAI4xmX8cPk=,iv:ID9iqQRjE9emgG3lTFgoQrEKmqK0eqaz1t5FK9MOLHM=,tag:CIN0vSdeaoC3snkJDDthRg==,type:comment]
-    METALLB_RANGE: ENC[AES256_GCM,data:7Bt32wzS3SrVRVO8QmKE+e/ogzTUI7z4x6sNm14QOw==,iv:e4XeBBSV2YiN4zGdr+sxMasQF5t54IEKykI0Z3fxoSk=,tag:pqVWrBaj9ZPDX6hSJ+/pqw==,type:str]
-    #ENC[AES256_GCM,data:NXVO6JeGUYAblNcTghoJ7JNw9yRnX2lV0piUs8ZXDzKAH8h/7ji+9EzUNEFVMG1FI6DUypG62OzTjw/Oqk/VZMX2cLl4/yB0N6rJ/QlQw0T+qg==,iv:d2s18+mCRQ2haRuV095/tnq7YDgYbeeJ9tgZlajlRgw=,tag:EC/xjUkA0ks4ss662RKaFg==,type:comment]
-    TRAEFIK_IP: ENC[AES256_GCM,data:TlSgwdhJprk/XqEpzDmU,iv:nXbjYmlgI4lYXqQbi8fNbc9EOL4hgRhqgi9oDTdulTQ=,tag:+5wb1A55wedeuxCRL/4Iug==,type:str]
-    #ENC[AES256_GCM,data:8Y2pDSjS0AfDYSA0Tiw+7y7lhX4OCzS9i18FTOGSwB29,iv:RR8907SAtuxQvyI4aDQcrsOKYFRb7l6XiS6QnqQLYVk=,tag:Rj+ZQcj9ZgPmOkTfBcikmQ==,type:comment]
-    BLOCKY_IP: ENC[AES256_GCM,data:RRepZMLXG+fsMV4PAV72,iv:kEj6FhU5bmPj+OdLlgBAhWLB/L3NJQU6a2Y9zV/iaLk=,tag:KBbSCt0cHg3Q9qB9bGvMnQ==,type:str]
-    #ENC[AES256_GCM,data:pzcZ+8quBWcPrEyRvzz/+aD+HZYZTISnLPTY3B0IaDy4gU9jsFCiq5N2QMgXHLqKs/C1Z5a0jDrmH/V+hbxgRDhgX1C5S81pFE7AvwuCAR4=,iv:pJw/CjbwqdQYpDbpBrPd0L9nUPYrCRqRqYlNULNaSSs=,tag:cQE3cRjuUmmWTOxdElKPGA==,type:comment]
-    DASHBOARD_IP: ENC[AES256_GCM,data:9E0jZMiZZ8BXZlulxaP/,iv:uG5BpGg39SJIk1hAVpyI6OfQuDftWEA+oWXlsgFJX/4=,tag:7EfCyaFbHu8+bAXkg6qtOg==,type:str]
-    #ENC[AES256_GCM,data:ADYzBkZew/6Q93Hy5AtoJ/ezjnALZTyRVLF0PyQFhrxCSxnFbCnOmv11FA+umczes6MdJ5WO4LTv2ZK2b9NmfdNtdDujSIxX2CQgx4tQ2dg9nnRNcgYg,iv:J5ZYJ5/9/YITLbQ/iFYqZm9EgKTBd5kaKopiWqC0+DA=,tag:TeX2eIMlZ372kSOoQp7Yfw==,type:comment]
-    #ENC[AES256_GCM,data:WAQkihMHft9LP90gajzC48FtF8WacoQYVttr/anYFW2E3yulA2m9YFMuzO7FEVRWDI+XfgMbNdK2Qtl+5PHKZtRLFOHZtj6tR4ZnCX1CZBmMC/c7k+/LpqrA6ynO8KPe8EjuzMv1gNkI/gGOw7wxv3jNs+R9eBlVOGXtwg==,iv:yxBIFPVYj6kzVNqrif7LLRGOdsDOF8pkS0y+/oR2kXw=,tag:wI4cEGHj4BVmHfkRvtw2nQ==,type:comment]
-    #ENC[AES256_GCM,data:fzHRWUITsJdyUlgK6w3fUCLjL7++yhrHA/Ff1+l6LR0asu3Ns3r78Xvw7ADol/R+ekhFLIzfMYYAIfGyHHPB+HiM/+2DWWuGLZPeqn6OUZY=,iv:5igVDRIFmg381UZw/g4249ND6i9h8p4U4RiEsyZW8NU=,tag:stpr0h4ORAsZLXpWxil3pg==,type:comment]
-    #ENC[AES256_GCM,data:rVuOQ11VJWn+fT3DMkeUo3I+nHFdp80fqd0ZEhMs6gUmrvf8YfQjBNqiVk/K4+BD9HFuoAuC,iv:uSdobCAZwiRgPk3gODcRdLOkjcIOCWXY/bpDGyG61Yk=,tag:d4xBDBmZQswdLvsQk3SMYA==,type:comment]
-    DOMAIN_0: ENC[AES256_GCM,data:OuUwQbb0MsFe3t1C,iv:/RiFrn/dCQPZbR33WZcklEEFs+xLkhqAuW0Tws9T3Kg=,tag:sfkui1/RWHF/RZDLFKn67g==,type:str]
-    DOMAIN_0_EMAIL: ENC[AES256_GCM,data:xo6nfJdh/m328Ys9esX5iGw=,iv:XB1fF3C8bkG+/8KyIc0SQR3fUgkaylfM0BKPaN6HaYU=,tag:YLrL1fJYV3TGt4pgBINasw==,type:str]
-    DOMAIN_0_ZONE: ENC[AES256_GCM,data:44RrrdGDZExNYXAU3AdzT443Uvnahp6obwdgntVGwow=,iv:G/M3cbfCb58cBaNnCzvcF6AyKJ9vTeQY/etAOvXDB4I=,tag:RrWZ4pr0s5eb43RvWgCHNA==,type:str]
-    DOMAIN_0_CLOUDFLARE_TOKEN: ENC[AES256_GCM,data:wxF+CVrBU0ZUDPFR8BdMWtbGTMc5hRSZGXUkbxxRQeqyuKv/aTiIJw==,iv:zw3vQ0Y9dj3Q3qoEaZaEXfr7hBpuUrErrdDjfizjKsI=,tag:e2EVd1+GSQg9j5FpobyxsQ==,type:str]
-    #ENC[AES256_GCM,data:QyiYHSO7/zlTU520iKbRY4ijppnJU9rM1EhdZU+C8TROsltpHujhHf6TFplozGlPC9D89BRnV78hC5m1HdMT1Q==,iv:kiD7JA3rs4uCqvGDw675GsoZDB7NEEd6GR5wQu1/iBo=,tag:mvk31VtuGkhZNtNpiH9hNA==,type:comment]
-    #ENC[AES256_GCM,data:JsFWx16cLDoJEq+Df1oxzG3rIdJ/S9JqS2pHLYZbHfvAiTsNO3FWE4CNcCvt272We3Vyjq/L4Gk=,iv:bUo7xe6ZcRloq7EGe1BfqRi/XkLYvB+iAh3wGimmocE=,tag:IRFjkPjXEi+VWiVPr4/b1g==,type:comment]
-    #ENC[AES256_GCM,data:DEXqfIhQkExDtYZV3C68Kqqu3g9oVm2EcA==,iv:k7Kl81gxguBFRbSjzTiGejyWgSVK8ERUzUAdwdXk61E=,tag:QuvOo/nYBpBB7EhbvUVC0Q==,type:comment]
-    #ENC[AES256_GCM,data:1TSns1zK/tZkQkuxPBXicLyPtvdfPoXDNEn0Ou+U/lU6td6llU76m6B81WMkkdGM/NeSDvWYvTf/Nk9wVTE6tcn1T6jUDiphVUA1n34=,iv:nx5JkmIx8Buv0/cN8loJKgcE2KXwwqyD3xfOeoRECTo=,tag:9QUWr63GsxzW2HHtGwETpg==,type:comment]
-    GITHUB_REPOSITORY: ENC[AES256_GCM,data:i3Cz2PJgJNZ+zHPpkfc1O/T9lTOm4bIoAbEGzDF3ukKaH+QlAWcqEnAVT1RW/9ck,iv:SqGRD0J7zXMYRRNFfCaly+GYFTVNNX8acZwaD56Trj4=,tag:FEv6ICmAIZNeQDvh0BAykw==,type:str]
-    #ENC[AES256_GCM,data:5XdBxRVy8rO3mBudhl/QynA1Dd72BGRKumRiF+INZ5K4yyxdAxffKvnWLe86NGPGc7N2RcFWc96MZF+dPe3nNVFTJORjxsc=,iv:IXng2lCEswTgPzsPqnwHJ1b+iK90EHqXwCi/Ht7emPQ=,tag:DBf2Hn63tRY7WARLom39nQ==,type:comment]
-    #ENC[AES256_GCM,data:rAzApa3Gza44+7fMMcx37Y96Mt1QcwzAJO71FT5NEVhZRRBk+Hi6ho5SMCnf73yi+RY4y7eI,iv:VXP9wX7ef3Zvyzk/Q7UikTGQ8kuEurW5dvF9hYfWEQQ=,tag:LcM0CZp3Ud3OzpHdNJiU6w==,type:comment]
-    DOCKERHUB_USER: ENC[AES256_GCM,data:DFvgGQDdfw==,iv:BLLz+31z+lAGMYNlUDd4UaJouXmQx6G7Qu8cYS2DisM=,tag:MSq4+R295KbRp8lBjsmTDQ==,type:str]
-    DOCKERHUB_PASSWORD: ENC[AES256_GCM,data:xj9+TsRpMhkCa0ociYBuf45z3UU=,iv:MaJ9cmMngx48/bUAJgAoRtp01aabMdi/eGXz/H9zXBs=,tag:2/qbmpsf6LKOtFWM4LaTLg==,type:str]
-    NFS_SERVER: ENC[AES256_GCM,data:qV8LMd1m9rNOn00=,iv:MTYfavtFnw1CrhGbv8MEcndKYURxpZ+eOo8vM6u7M/c=,tag:SntMIT9gQbS8lQwBhO5SAA==,type:str]
-    PLEX_IP: ENC[AES256_GCM,data:AqEYSM5qgTBINGgFQ1vh,iv:hka86FIJ0nRzniW2uw9C5C9631C0x7wtNW9LOVzG9pk=,tag:5nZQ9PiboDImed0aD84zjA==,type:str]
-    BACKBLAZE_ACCESS_KEY: ENC[AES256_GCM,data:/QTkKiZ4DIps0dzXEbZg+FVuna5aSXKRFQ==,iv:bjYpqldYR8B/64fCBaGKAz59ci0yomJ10hgg/m5ycSY=,tag:batmzHAGYxX+/A5O2+xqIA==,type:str]
-    BACKBLAZE_SECRET_KEY: ENC[AES256_GCM,data:mgUg2We7x4PIQDTQx0zX0LsSynQ83yg2,iv:7d1TYHvsf/qUGOzfrdy0gcaxcX8e3e93QaLlcYRLrsg=,tag:+xOjzJG3T9C05fI0zmfBWw==,type:str]
-    #ENC[AES256_GCM,data:x1TlrvMo4Smhw2NrL6bMUhbpcj8HBXeKm5n/B4o8yV9OVKE0rxI=,iv:zC5sLk85PmjFYcEQh8sNrAdfM5o/WEvVsAkUi//cUjY=,tag:lz2YcbgeDr7aHqk4OpF01g==,type:comment]
-    BACKBLAZE_ENCR_KEY: ENC[AES256_GCM,data:43iDuihS6Ki/2JpZ/BzBJvCGEq4=,iv:18a8cx7NCOJoYt6ZpKwDPsROrEx1nFvcLnxRiido1QY=,tag:w10AE4HPZUgNpHR/beNzwQ==,type:str]
-    #ENC[AES256_GCM,data:SnRi2ci9pTxbxX2jsvA=,iv:Tz41N691EHiRUMDsHjAb3cMhWPcHp96vt0Pa+YnxMrc=,tag:Nf7s0mi6cOoRJ2wPt1njIg==,type:comment]
-    PODNET: ENC[AES256_GCM,data:lIYJJE5EWqHbf8A+HQ==,iv:AdUDFepaZyFHYrkwRTK7eLgdDrb4vHtznlcx44W/YdU=,tag:0bThQZFdZ2n8RCcCWALd+Q==,type:str]
-    SVCNET: ENC[AES256_GCM,data:37KqpIvjsCoNjBQaOA==,iv:38dLME98iIaLrl5a/UqBwTv2Ir4QrJJ9ndsCHHjgA44=,tag:KvPL5KGrThh6p8xZrXtpYw==,type:str]
-    CLUSTERNAME: ENC[AES256_GCM,data:634xEg==,iv:WEhgPBRxiUb/Hh4cHhdxErP3yMN/epAwI87FLFiYlJA=,tag:2V78S/j9qS3vlLnmd2saTA==,type:str]
+    #ENC[AES256_GCM,data:1O2QOBrHEOo21eiEbDCIvwOHvkuBlyAfZxPW5CCVbNRMg7ClHdvxJ2RSRtKv9cyKgz+V5uqql9+cCDQ0ypf42yw=,iv:0W9sYBjESwpyugp8DJM7nXh2PLhWpc6xxILn62p380k=,tag:ZBxFz5gW16nukZRaRkVidQ==,type:comment]
+    #ENC[AES256_GCM,data:h9JpHQehInabNIFUeFTH1JdyH1mc4B0z9lEQ3Qx+b+0AdK5mRU13g59xqvg=,iv:E4+cao228+kPnYad1YJ6fq3ISa7b7zyPRAR/QqWojo0=,tag:9s9EsN2sHYUbTm1/HAMg3g==,type:comment]
+    VIP: ENC[AES256_GCM,data:gBR3MfFI8s9lvwLCGw==,iv:Vw6+Dd5wMmzWIectymuEK54bfzCBY0hS12IM5Ci2yrw=,tag:J7dvM/bRfmC1oKny8Ibbmw==,type:str]
+    #ENC[AES256_GCM,data:30BuyvBEw9PQUfCfMHaGw+wF7ZnXK3rpAh5O,iv:3OgYRM75KOy2kSzv+GrJwuazWZAGtA4gOXhpXHycgq8=,tag:6xmxz7IbmGNkr+/ZRmucgQ==,type:comment]
+    #ENC[AES256_GCM,data:sdZXGTtJF3P7nKdQjAkBzRUOtM0tyR52zPsAh6Ap46vHdxGp3/ydvvdDREa5yZzMSnbMrQdU2wxIZHBwaNXQpKJFGX99bZRU/uDvPt95BKtFf+FP8TBTKsE=,iv:MylE0srTH82xNq0RND2Z9f45kGdxLEq+3FAf2YCOYl4=,tag:tVmM4HoQyXYgNB676l4ZWg==,type:comment]
+    MASTER1IP: ENC[AES256_GCM,data:0+xieijSNzzxtFjnCd8=,iv:HZ1zaafQeqZuYk2BtdEIE36apA+G+UR2id3YBOM9tZ0=,tag:QJiQGoH/9tA5sQOtrsSS/Q==,type:str]
+    #ENC[AES256_GCM,data:oXg7C1J7QtRNMu9BqcVojXvmPYnWgn0/sBfneIRIgaOlOg==,iv:2/Ua8arVbOcB2ubZSXzLSwKFqotxkEv2OaY3Y5h1fUs=,tag:AxkfBielpaXFZVMOE/OD6g==,type:comment]
+    GATEWAY: ENC[AES256_GCM,data:cUGpUsyysDMQYha/4g==,iv:PWdpAdhgoNksP9FHfIxDBhGTxnnxbLT+EU8MM9GY5tQ=,tag:HcEueU6EK7WgWRi5DmmSuA==,type:str]
+    #ENC[AES256_GCM,data:CwiXlQFakszNj+lkXxlWuThONGPlmL9KqsTpbc2vjGcElrXHO5Nz+5LYI3Py03Q=,iv:Mz9MH+5JMtIdkkjeOnN17z64rZ5UHw7Jt/slcSdkPDo=,tag:fL8OkRon0rGD59peuN8ECQ==,type:comment]
+    METALLB_RANGE: ENC[AES256_GCM,data:eDthn05YMueZ/CVFi+hqcrVCF4j9GCy0iPZtzDLYag==,iv:r4Y6yGXewBHFy1s9TVoXs11Tuh8nPiUMqXfkF850G1w=,tag:frdprGoT7VxWE9oeIC4JUA==,type:str]
+    #ENC[AES256_GCM,data:HNYAJxr1TlMhS/DZvTw6C5nT+YuXtHLogKPRgJlIiUtjbs1C7R9Dhrvx7kFZ1Ur1HTFIqve+HX8ymvdJp7yXGyDvgAr48cPLhQwSpZ0QQwekVw==,iv:sOJEgHtS+IiuWR5bVMuF4mcwxacFay18lFqK+wgTMXs=,tag:q7b75tSq16kP65tL5CLkuw==,type:comment]
+    TRAEFIK_IP: ENC[AES256_GCM,data:xdPDuelUwNJ+VN4+MsP+,iv:dx00JU8frvauDfbNN+ongFdTMLGQwsuqdFnXLalipYk=,tag:pZTtv67iSxsWIMr4LfePuQ==,type:str]
+    #ENC[AES256_GCM,data:s9ELZdNjxan5q9TZld/bx6FJM/E1J7V5068fhG7TPlxg,iv:aBl2LjomzXpjbClKFFpN/onEZGxt4yKnH+j1UC4yiho=,tag:sifWmKPeWxjdrfiy8WvPDA==,type:comment]
+    BLOCKY_IP: ENC[AES256_GCM,data:GtBPeG2W17h5bmdzdL5Y,iv:ZngmYCN6o2b6BEfCRRtt9m3nJwoQhBEz9xMTFQcGrLs=,tag:hJ/G3ix/G7zU+qEM0QdLqA==,type:str]
+    #ENC[AES256_GCM,data:3+0zaAmaLpDU0wNtfvguFU9gZjdvQXubYr4CZC1U1ilytQf7Elcu6nm+iR7654Bf3ZVl+3/1E4D1lHs3OR3n2/wW/w2lyBby0zKFEwkk+M4=,iv:5FNRvdw5Ke8IaxNyuz33rVme7AUI3GZ/fm50POd/GLc=,tag:tTSXQcI4fU69Jx0Yvv9szw==,type:comment]
+    DASHBOARD_IP: ENC[AES256_GCM,data:EmZ3ri4SNc8L7IUpRuR3,iv:Wko0uPcm74vFNMbNcOUZni0IsYlzg76Qkb8pTrpGsx8=,tag:Kae2u3FIA6pssqicI4W6TA==,type:str]
+    #ENC[AES256_GCM,data:x+b/tCLYHLO2mV54UAvRB9oen5zhVcUdRzQamdewv3T+9AAzROXvmvsDvVdgXluar3lOVKg9Y0HSaIzAu7A3qjMOYWMuKSMOzVueMyAUh5GPsTe3DWjk,iv:e+00LjzwAzaZdG6kcI6szN8wd1iUaEwz3/4nqPvWrBk=,tag:yJ9ZunJvsUHSfYbjfXe/hw==,type:comment]
+    #ENC[AES256_GCM,data:+487sLzn0wJDPHQccdKs//mNo+3/E2bTSQdszy8QJ13vyd/gL2LXo1VoHvwU+wwviC1huDbOqhuD6gpvW3sAMwHUTOu8eAV85fF4i0lSaYLiU0iNK6uW9Oxnw3hOxqQOVO4CJ16DYnYQeuzrhUYMsVKo5ztybVmevJrncw==,iv:NulzHZxHlKoRZOnzQbHnMrecbgm+COIQ19WxRsNm4Gs=,tag:FbCzRHJNDZITE6KdtJ84PA==,type:comment]
+    #ENC[AES256_GCM,data:OYUtN9cc4/+zW2TBPjSakTT7lTKyWVddumDvVedF5drTVXVCgK0og3j9W6FzjQdy88Klx0+VDwXRLoYFahKYw07MDz99zHpvu97Eol90uKk=,iv:KlBMzGvj6i1jc20l5/Dx0x4cvRQngICr1DtoZ7ovJGs=,tag:Wn3STJcH9dB7LEiJlcME/w==,type:comment]
+    #ENC[AES256_GCM,data:uVK3TErIp3ELEM/oZzS43kL46BOrS8Ki6BQv8n5O4TbBWqBuifsckD73nvYFm/3y4sOlNzwN,iv:SAgg6GnnuPqp0BXXWb5nnWCxmM3kLX/b+1qgPo3hco4=,tag:6vFTrzElSxo622zN8+1KjA==,type:comment]
+    DOMAIN_0: ENC[AES256_GCM,data:9qIFxl3Ce21s2tkm,iv:rpbMO72fGviB8xfli1Ncnlv+64VoX+eSxlc/5zI8BGo=,tag:m0ZRiYfWk/iC4W68m7EQ9Q==,type:str]
+    DOMAIN_0_EMAIL: ENC[AES256_GCM,data:ok1kszf6dx50b8MHRL9Vt6c=,iv:ao8t08AjLHbTqoEKleLvNxsWXMd/qnrbyKKUbbqhl+M=,tag:y3m1pMCsX8+DLFsOygmHjQ==,type:str]
+    DOMAIN_0_ZONE: ENC[AES256_GCM,data:v8k87Me0DBWERg1rmAkMnCrmU9Kim9P/gPHVv+M86JE=,iv:lq7BZwUA2Z60WA0EtS4jYsKRx9EsK413474m5oMsRHk=,tag:Ada2stqiBvBySW9knHEH9A==,type:str]
+    DOMAIN_0_CLOUDFLARE_TOKEN: ENC[AES256_GCM,data:U+ewKJhfuR5qC+WCIu4ZypfyfSFyXP1NSbViwJYqwyfg28Jlq6aCVQ==,iv:0VA8FelvQiwmqgifNMtYnjxT+ugDckL8nnWkWtFqU+4=,tag:xKoltOrMNbaI4lCK8jC0+A==,type:str]
+    #ENC[AES256_GCM,data:CaxsM5y5kwXCyPRPnC+wvwc/cldy25bE4eWCS/aqHR34vdoYQIS39Wqn02/pRQakNXmx0bxxcwSNQxuCBj1TOQ==,iv:23yh3aIkalq5hJT4lfsewyGTmofXFiwIKGeGSifdxnQ=,tag:BIeAus1GvoG8gnSleQLAdg==,type:comment]
+    #ENC[AES256_GCM,data:N63jwfb1ejCF4M1choG8CwII7nrBPWWg3EfKnI5ASUYx53xbFSKjYVKpSy/c2r/+ecePzBMRHBg=,iv:Q3j2QkvaYJItdcjwu7tDQyjmzL+X6Z7tr4nvpiHsSlk=,tag:D59cIbw2i4oVNrQW/MCPCg==,type:comment]
+    #ENC[AES256_GCM,data:hrPwzLq73w2SPmBDEMAjGnGgBrv1/GR8kg==,iv:3wEVvrZLre2kuWzqmTB9Jm0PLkcBh0ANPGPl0DdLFUg=,tag:IDFnab9FmtUzv34SawzNYA==,type:comment]
+    #ENC[AES256_GCM,data:7nVz0FkwCfr8TsIs0HK7Gyn2QuVmhcaHYuXyxbc02Dxvfga6HvhhJixMW8owHj7x4CNPhF+J0AlN6RMJyFxSQBPBjPRibdhbb1JRcIA=,iv:RvU0WLkH+k7CSjemGWnFIBfpmfNe4GIxBuk8Ead/hLE=,tag:i2hSYx7f6/JWDWyUgkKmYw==,type:comment]
+    GITHUB_REPOSITORY: ENC[AES256_GCM,data:A3mtcwLYJyvCabdSKy31awbHmZx0r0syffvTvVEG6DRzVsf+2U1ZT0TUifPIrYdX,iv:iI0LAqMvPkkHY0BfT2RwVP/3NPTIKPVVfnNegOcSFho=,tag:ZqDRWt6BiRNKoD0PllZLeA==,type:str]
+    #ENC[AES256_GCM,data:m/F62O+SW9l9Jem9CGemAC6votVp4zQ2ACK14OUyDkWVtCC+5Op0Eo14H06GS7O83nl2ERlefi4rdSSnjeracXz4qN92Q4Q=,iv:1sUa9PO+SRP/5ArJ/Bt4JyzXpSMgszjBYtKFqkKH//o=,tag:P20nVepXmbsnk0r34PJzcg==,type:comment]
+    #ENC[AES256_GCM,data:IXW4NV+5XSNOW6EbksceluJhpHN7chdWcERWYxCAxPQkmXlIIRaMnw3U1pW0FEwZ6Bv++axZ,iv:Y0Kctc6aZNyPlfVDVThe3El+gOG8HjX6N3EmRBPQ+OA=,tag:YmhYzw1RRY83FzTTDewA7w==,type:comment]
+    DOCKERHUB_USER: ENC[AES256_GCM,data:2n7cW2zgFA==,iv:MdVQcTMzG9iRjBMpTF2zeRvCfWS128Vp1KB9H3rO4E0=,tag:oU7cGQI40cWn5G3NPF2pmw==,type:str]
+    DOCKERHUB_PASSWORD: ENC[AES256_GCM,data:kExFfG24TfEl4FdTJRg8P++V6CA=,iv:rl7wew300WqV2KRz8/jxDUIzXd0n/oXMj/9aLAaSd1M=,tag:j2Vc6bIeSdAw7NLLLHntBw==,type:str]
+    NFS_SERVER: ENC[AES256_GCM,data:cpoIDtEQNmzt9m4=,iv:X0KrbvVhPCkPR8e26tETwlU5an0F8drFMvcVCPLlGTw=,tag:bznJuId9VNz4WbkRiouTbw==,type:str]
+    PLEX_IP: ENC[AES256_GCM,data:kCIfoDgYfGDZYU3CsSGe,iv:RoFACVTgnRnxCr4p76ZSBtzRsWDoi20IJvrNqN7qRuM=,tag:pZCBLi3xrNpa1GcHNgWhqw==,type:str]
+    BACKBLAZE_ACCESS_KEY: ENC[AES256_GCM,data:7EQ2b8BHFG7JPZZzQho9d3tJf3G8mdrJGw==,iv:lhfaeLqDnp4lLmtlVEfQAUOlInJnclHf8j9CUuo/e4A=,tag:00VhTmFUoCR3xPca5ts65w==,type:str]
+    BACKBLAZE_SECRET_KEY: ENC[AES256_GCM,data:SI9GpIRY5hdvL5hH8bJsv6j4UXMFlOiC,iv:Q0FR6QvqsPhiGzESxpTJT7syRM+aCg9u+cqEmZxshyA=,tag:oiEu3da11Jh8x0GYb7OOQA==,type:str]
+    #ENC[AES256_GCM,data:g6BNmaB9RxMzNs3Vz24s03nKrGXGRhQ/PooDklYMAklp7aeyGuQ=,iv:xW9T/k8oRwG0Kd5Eoq58KAS1rQVMmb+9Mqm1bL3EpYg=,tag:ijNvYyIdacNPtXkz72zWVg==,type:comment]
+    BACKBLAZE_ENCR_KEY: ENC[AES256_GCM,data:F/ZMhh1zN5GHwq774R8qDZ1r0E0=,iv:q86+SupvPv0nveFJ/2RolLGgNFWLDlp2jeoeJhQ+OYQ=,tag:k+4lnXc8VDjotrEDIfo4dA==,type:str]
+    #ENC[AES256_GCM,data:twy3aQZRDdNIkeQff1U=,iv:LeiXUjgCdysY8n1bJf6J0NEFjWBKF8sLXq8LaTG2h7I=,tag:3pja25MN9ySNpvM+uiRKjg==,type:comment]
+    PODNET: ENC[AES256_GCM,data:2SXjDHxh/5VLUdYefw==,iv:rMiU/hGjXhoJfgugly2TsEdlUemroxlyCdb8upfbFcA=,tag:KyA/fblq1i/znaN3gcin/Q==,type:str]
+    SVCNET: ENC[AES256_GCM,data:NKTXv4tVDJyPK1Suow==,iv:sx6DiM7UxPIrGxnnzAMxC/4UoorHoIDjM6bTiYnDYFA=,tag:JJgOAn+2AIx18tLKfxWAsA==,type:str]
+    CLUSTERNAME: ENC[AES256_GCM,data:0ncT3A==,iv:9DJKhOC4Cr1j4m9BI1wiFL2tQquYHi7ZhqLLC+a6/yI=,tag:/p/a7TUIjmmx4kBa8awk0g==,type:str]
 sops:
     shamir_threshold: 3
     kms: []
@@ -57,14 +57,14 @@ sops:
         - recipient: age1xerwm86t75dl2v0sqq5xvzag5q6deawx5en7rqy92886049htaxqagw7yt
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBlcmMreFRCTUxjUHJYeFBl
-            VXJVMEJ1ZGRwRXd1eDQzQ1VzRmkzZzhYb2kwCk5DOW9sNWxjNnVqcVc0Tm15RkVC
-            a2x2N095Z0NqNXNhekVKaEFuWlhHa0EKLS0tIFcwblYrTTdhTHNYcWo4TTh5VGZ3
-            R2FuM0toU3l0N05WYnZPSHlOdktiUWcKZW1xZza1fhu3gm9ThvPoUmi7XcafkgOF
-            NDRvftVzhdVlf1G446FB1CgkJ3tU5Y3x+MLAm8tR3eHtNFNAi050CQ==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSB0cHJiNTB1WlJicVpKNytM
+            cTA3anNjYTZLUzZWdE5yQ0ZBVjcxUzNoWlFnClVoNXRtT1g5TC9aeEh1VStTcmlI
+            NUpTb1FidytBcUhsRW5pejBhVWdqdUUKLS0tIGMxb1poZGV2T3BYaHZNNGtxMGsy
+            V1VFcVB2aWpqZFlEZTdoc1lOMDhuaGcKY6BpiHvN7S1Fj1G9cR2iRaARKQM8LzkM
+            cZ5q5tctkyAJLWyHxVRGmweq4mD1GMAETWu/aNKeAKKDn1X/Y/XEYA==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2025-01-11T19:46:07Z"
-    mac: ENC[AES256_GCM,data:eaE+1WcyOmwclpt6KkEdPRJtfKBWLcRk6liy1YZuivNntDLm6POksB3Iq5orEBhN96+3P1W5p7l8pb6oh29v5ip/QL3BHTaNAztM7NMY40yGxvh6EJtSGgLVBNPn4ZHCNpVhAEAbwOFrZhIqBjT48+oh3ulrSCW4kh5pm18Kn2k=,iv:pjDtY4jNV3Eq4I9JHQvgmdtTu80X79MyrmTuebEuBRQ=,tag:KS9ChlSims2h98q8Y/zYEg==,type:str]
+    lastmodified: "2025-01-11T20:05:15Z"
+    mac: ENC[AES256_GCM,data:F4GEPnupt2R8z+auuQw4wcNuFQfQ/J7a+Ng8Zknhogwc9XWt1/m2Aep6IAUSBS8tu17rz4mu7JLjRaiBrTedaAGrXbNEWeZQti3HZYrXZtY/h7bGCF59eF7sw9vN2PPkOWVWmG/cabzj5D7SVJo5S78+fP8bNSZNfKqZ4hiWn2A=,iv:cN8X9krgsTWzGmPHrvnpx4x2djiYgsOepY1lLueR4Xg=,tag:36+cWw8Lnf5w1G+qm7xZ7Q==,type:str]
     pgp: []
     encrypted_regex: ((?i)(displayname|email|pass|ca|id|bootstraptoken|secretboxencryptionsecret|secrets|secrets|password|cert|secret($|[^N])|key|token|^data$|^stringData))
     version: 3.9.1
